Alignment fix

--- a/css/style.css
+++ b/css/style.css
@@ -188,13 +188,14 @@ figure {
 
 figcaption {
     position: absolute;
-    top: 40%;
-    left: 20%;
+    top: 50%;
+    left: 50%;
     height: 50px;
     width: 200px;
+    margin-top: -25px;
+    margin-left: -100px;
     background-color: rgba(36, 36, 36, 0.7);
     border-radius: 5px;
-    text-align: center;
     line-height: 50px;
     color: #fff;
     font-weight: 400;
